# study-search

./: .env.sample  .gitignore  Makefile  README.md  api.py  config.yaml  frontend.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.py  transcript.py  utils.py  vecstore.py
stores/: docstore.py
utils/: utils.py
