[tool.poetry]
name = "lang-pdf"
version = "0.1.0"
description = ""
authors = ["MalarzDawid <github@dawidmalarz.pl>"]
readme = "README.md"
packages = [{include = "lang_pdf"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
langchain = "^0.0.161"
tqdm = "^4.65.0"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
